// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockAlignmentUI > should match snapshot when controls are hidden 1`] = `
<div>
  <div
    class="components-dropdown components-dropdown-menu components-toolbar"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Align block"
      class="components-button components-dropdown-menu__toggle has-icon"
      data-toolbar-item="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        stroke="currentColor"
        stroke-width="1.5"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.25 3H13.25M3.25 21H13.25"
        />
        <rect
          fill="currentColor"
          height="7.5"
          stroke="none"
          width="17.5"
          x="3.25"
          y="8.25"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`BlockAlignmentUI > should match snapshot when controls are visible 1`] = `
<div>
  <div
    class="components-toolbar"
    icon="[object Object]"
    label="Align block"
  >
    <div>
      <button
        aria-label="None"
        aria-pressed="false"
        class="components-button components-toolbar__control is-compact has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.25 3.25H20.75M3.25 20.75H20.75"
          />
          <rect
            fill="currentColor"
            height="7.5"
            stroke="none"
            width="17.5"
            x="3.25"
            y="8.25"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align left"
        aria-pressed="true"
        class="components-button components-toolbar__control is-compact is-pressed has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.25 3H13.25M3.25 21H13.25"
          />
          <rect
            fill="currentColor"
            height="7.5"
            stroke="none"
            width="17.5"
            x="3.25"
            y="8.25"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align center"
        aria-pressed="false"
        class="components-button components-toolbar__control is-compact has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.25 3H20.75M3.25 21H20.75"
          />
          <rect
            fill="currentColor"
            height="7.5"
            stroke="none"
            width="12.5"
            x="5.75"
            y="8.25"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align right"
        aria-pressed="false"
        class="components-button components-toolbar__control is-compact has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.75 3H20.75M10.75 21H20.75"
          />
          <rect
            fill="currentColor"
            height="7.5"
            stroke="none"
            width="17.5"
            x="3.25"
            y="8.25"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
